Refactor Lesson
Update LessonTest and LessonBuilder accordingly